[package]
name = "train-tracks"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "train-tracks"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4.2", features = ["derive"] }
colored = "2.0"
base64 = "0.21"